# This is a combination of 2 commits. # The first commit's message is:
develop ini

# The 2nd commit message will be skipped:

#	develop ini restart

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        android:name=".ui.App"
+        >
 
         <activity
             android:name=".ui.users.UsersActivity"
