--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="demo.victormunoz.githubusers">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
@@ -33,6 +34,8 @@
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar.userDetails" />
 
+
+        <service android:name=".service.FloatingIconService" />
     </application>
 
 </manifest>
