--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-beta3'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha08'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,7 +17,17 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
+}
+ext {
+    compileSdkVersion = 27
+    supportLibVersion = "27.1.0"
+    espressoVersion = "3.0.1"
+    leakCanaryVersion = "1.5.4"
+    retrofitVersion = "2.1.0"
+    butterknifeVersion = "8.2.1"
+    daggerVersion = "2.5"
 }
 
 task clean(type: Delete) {
