--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,21 +4,21 @@
     package="demo.victormunoz.githubusers">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:name=".ui.App"
-        >
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".ui.users.UsersActivity"
+            android:name=".features.allusers.AllUsersActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -28,14 +28,16 @@
         </activity>
 
         <activity
-            android:name=".ui.userdetail.UserDetailActivity"
-            android:screenOrientation="portrait"
+            android:name=".features.userDetails.UserDetailsActivity"
             android:label="@string/title_activity_user_detail"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar.userDetails" />
 
+        <service
+            android:name=".services.FloatingIconService"
+            android:exported="false" />
 
-        <service android:name=".service.FloatingIconService" />
     </application>
 
 </manifest>
