--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,17 @@ android {
         }
     }
     configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:2.0.1'
+        resolutionStrategy {
+            force 'com.google.code.findbugs:jsr305:2.0.1'
+            force "com.android.support:preference-v7:${rootProject.ext.supportLibVersion}"
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
     }
 }
 
@@ -50,9 +56,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     //RX
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
 
     //GOOGLE
     implementation 'com.google.guava:guava:23.3-android'
