--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,6 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.1'
 
-
-
     //GOOGLE
     implementation 'com.google.guava:guava:23.3-android'
     implementation 'com.google.code.gson:gson:2.8.0'
@@ -99,11 +97,15 @@ dependencies {
     //TEST
     implementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
     androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+
+    //MOCKITO
+    testImplementation 'org.mockito:mockito-core:2.8.9'
+
 
 }
