--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,8 @@ dependencies {
     //RX
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.1'//RxAppCompatActivity
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-kotlin:2.2.1'//.bindUntilEvent
 
     //GOOGLE
     implementation 'com.google.guava:guava:23.3-android'
